syntax = "proto3";
option go_package = "github.com/ngld/knossos/packages/api/common";
package ngld.knossos;

import "google/protobuf/timestamp.proto";
import "mod.proto";

message ModIndex {
	message Mod {
		string modid = 1;
    google.protobuf.Timestamp last_modified = 4;
		repeated google.protobuf.Timestamp packs_last_modified = 2;
    bytes version_checksum = 3;
	}

	repeated Mod mods = 1;
}

message ReleasePack {
	string modid = 1;
	uint32 packnum = 2;
	repeated Release releases = 3;
}

message ChecksumPack {
	message Archive {
    message File {
      string filename = 1;
      bytes checksum = 2;
    }

    repeated File files = 1;
    bytes checksum = 2;
    uint32 size = 3;
    repeated string mirrors = 4;
  }

  map<string,Archive> archives = 4;
}
